--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@aws-amplify/auth": "^6.8.2",
+    "@aws-amplify/auth": "^6.9.0",
     "amazon-cognito-identity-js": "^6.3.12",
-    "aws-amplify": "^6.10.2",
+    "autoprefixer": "^10.4.20",
+    "aws-amplify": "^6.11.0",
+    "lucide-react": "^0.469.0",
     "oidc-client-ts": "^3.1.0",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-oidc-context": "^3.2.0",
-    "react-router-dom": "^7.1.0"
+    "react-router-dom": "^7.1.0",
+    "sonner": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -28,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
